--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
@@ -18,6 +18,12 @@
         android:theme="@style/Theme.MyApplication1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".view.forgot.CreatePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.forgot.VerifActivity"
+            android:exported="false" />
         <activity
             android:name=".view.onboarding.OnboardingActivity"
             android:exported="false" />
