--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".view.add.AddActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.dashboard.ResultActivity"
+            android:name=".view.main.ui.dashboard.ResultActivity"
             android:exported="false" />
         <activity
             android:name=".view.splashscreen.SplashActivity"
