--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.main.ui.dashboard.VideoActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.detail.DetailYoutubeActivity"
             android:exported="false" />
         <activity
